# pyduckling

./: Cargo.toml  pyproject.toml
src/: lib.rs
