[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
manylinux = "off"
sdist-include = ["duckling-ffi/*"]

[project]
name = "pyduckling"  # Replace with your actual package name
version = "0.1.0"

[dependencies]
pendulum = "^2.1"  # Replace with the appropriate version

[package]
name = "pyduckling"  # Replace with your actual package name
version = "0.1.0"
edition = "2018"

